--- a/gb/23/12/31/n14147435.md
+++ b/gb/23/12/31/n14147435.md
@@ -19,17 +19,15 @@
 <p>责任编辑：夏律玓</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147184.md#1">摄影师观神韵：就像是和朋友庆祝中国新年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147208.md#1">神韵达拉斯首场爆满 观众盛赞：满载而归</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147213.md#1">神韵演出精心策划 美不胜收 建筑承包商赞叹</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147220.md#1">演出传达和平与善良 公司老板赞神韵很伟大</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147224.md#1">国家机构部门主管：神韵带来众生的安宁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147229.md#1">首席财务官再观神韵 赞现场音乐鼓舞人心</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/5/n11431635.md#1" target="_blank">共产暴政录：盛世才与新疆的几个待解问题</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/26/n2443847.md#1" target="_blank">《中共弄巧成拙》(1):天安门自焚伪案</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/14/n9839893.md#1" target="_blank">郭婉莹——被遗忘的“上海公主”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/20/n10921963.md#1" target="_blank">福国利民 2018年法轮功所获各类褒奖</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
