--- a/gb/23/12/31/n14147553.md
+++ b/gb/23/12/31/n14147553.md
@@ -37,7 +37,7 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/20/n10319814.md#1" target="_blank">裴毅然：重庆谈判真相——破裂主责在“共”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/5/25/n7929122.md#1" target="_blank">九十五岁老人对法轮大法的感恩</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/25/n10247979.md#1" target="_blank">中共淫乱的前生今世（6）淫乱大看台</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/7/20/n10578907.md#1" target="_blank">【细语人生】见证大法的神奇（13）</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
