--- a/gb/23/12/31/n14147587.md
+++ b/gb/23/12/31/n14147587.md
@@ -29,17 +29,17 @@
 <p><strong>本文转载自明慧网文章：<ahref=http://greetings.big5.minghui.org/mh/articles/2023/12/30/470039.md#1 target=_blank>沈阳大法弟子恭祝师尊新年好(21条)</a></strong></p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/1/1/n8654270.md#1">大法真相入人心　百姓恭祝李洪志大师新年快乐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/9/13/n11518812.md#1">中秋月圆 逾40国法轮功学员问候李洪志师父</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/5/4/n12081685.md#1">56国海外法轮功学员恭祝李洪志师父华诞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/9/29/n12438239.md#1">中秋颂恩 墨尔本法轮功学员感恩李洪志大师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">屏蔽露营 6人防风雨帐篷67%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：家庭智能守护小卫士 半价抱回家</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/2/n10185727.md#1" target="_blank">“石油之父”惨遭灭门（上）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/28/n11415000.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（上）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/13/n10214702.md#1" target="_blank">中共淫乱的前生今世（1）马列斯毛</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/4/n11569061.md#1" target="_blank">法轮功学员受邀在美智库演讲 感动华府听众</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
